--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,24 @@ jobs:
 
       # see https://docs.mongodb.com/mongoid/current/tutorials/mongoid-installation/ for supported versions
       matrix:
-        ruby_version: ['3.3', '3.2', '3.1', '3.0', '2.7', '2.6']
+        ruby_version: ['3.3', '3.2', '3.1', '3.0', '2.7']
         mongoid_version: [head, '8.1', '8.0', '7.5', '7.4', '7.3', '7.2', '7.1']
 
         include:
+          - ruby_version: '2.6'
+            mongoid_version: '8.1'
+          - ruby_version: '2.6'
+            mongoid_version: '8.0'
+          - ruby_version: '2.6'
+            mongoid_version: '7.5'
+          - ruby_version: '2.6'
+            mongoid_version: '7.4'
+          - ruby_version: '2.6'
+            mongoid_version: '7.3'
+          - ruby_version: '2.6'
+            mongoid_version: '7.2'
+          - ruby_version: '2.6'
+            mongoid_version: '7.1'
           - ruby_version: '2.6'
             mongoid_version: '7.0'
           - ruby_version: '2.6'
